# odil

./: .gitignore  .style.yapf  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: black.yml  lint.yml  mypy.yml  ruff.yml  tests.yml
auto_examples/poisson/: poisson.ipynb
doc/: .buildinfo  .gitignore  Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  requirements.txt  search.html  searchindex.js
doc/.doctrees/: environment.pickle  index.doctree
doc/.doctrees/auto_examples/: index.doctree
doc/.doctrees/auto_examples/basic/: fields.doctree  index.doctree
doc/.doctrees/auto_examples/infer_constant/: index.doctree  infer_constant_adv.doctree
doc/.doctrees/auto_examples/poisson/: index.doctree  poisson.doctree
doc/_downloads/1d585bf137ffd9906e08a8ecc825a674/: plot_1d.ipynb
doc/_downloads/24eaf8dd253be2821d2f6eb64c3d9de4/: fields.ipynb
doc/_downloads/319ebb28fc2a00a84a4950112fc7bbca/: infer_constant_adv.ipynb
doc/_downloads/ba280f66aff03682481a6b490d9023f6/: poisson.ipynb
doc/_downloads/c45f51a8d3558f3a87035cd12d6fa39a/: poisson.py
doc/_downloads/e30c667c9801d5417694b836d4b76169/: harmonic_oscillator.ipynb
doc/_sources/: index.rst.txt
doc/_sources/auto_examples/: index.rst.txt
doc/_sources/auto_examples/basic/: fields.rst.txt  harmonic_oscillator.rst.txt  index.rst.txt
doc/_sources/auto_examples/infer_constant/: index.rst.txt  infer_constant_adv.rst.txt
doc/_sources/auto_examples/poisson/: index.rst.txt  plot_1d.rst.txt  poisson.rst.txt  sg_execution_times.rst.txt
doc/auto_examples/: index.html
doc/auto_examples/basic/: fields.html  fields.ipynb  harmonic_oscillator.html  index.html
doc/auto_examples/infer_constant/: index.html  infer_constant_adv.html  infer_constant_adv.ipynb
doc/auto_examples/poisson/: index.html  plot_1d.html  poisson.html  sg_execution_times.html
doc/theme/: layout.html
doc/theme/static/: basic.css
examples/: .gitignore  README.md  README.rst  compare.md  compare.py
examples/basic/: .gitignore  README.md  README.py  fields.ipynb  fields.py  harmonic_oscillator.py  plot_fields.py
examples/heat/: README.md  README.py  heat.py  plot_train.py  run  run_all
examples/heat/out_odil/: args.json
examples/heat/out_odiln/: args.json
examples/heat/out_pinn/: args.json
examples/heat/out_ref/: args.json  train.csv
examples/heat/ref/: ref.pickle
examples/heat_tmax/: README.md  heat_tmax.py
examples/infer_constant/: README.md  README.py  infer_constant.py  infer_constant_adv.py
examples/out_fields/: args.json  train.csv
examples/out_infer_constant/: args.json  train.csv
examples/out_poisson/: args.json  data.pickle  train.csv
examples/out_veltracer/: args.json  train.csv
examples/poisson/: README.md  README.py  plot_1d.py  plot_field.py  plot_train.py  poisson.py  run  run_osc
examples/velocity_from_tracer/: README.md  README.py  veltracer.py
examples/wave/: README.md  wave.py
slides/: .gitignore  filter.lua  template.revealjs  util.py
slides/modil/: Makefile  index.html  index.md
slides/modil/media/mgopt/1d_adam/: args.json
slides/modil/media/mgopt/2d_amg/: args.json
slides/modil/media/mgopt/adv2d/: plot_train.py
slides/modil/media/mgopt/body2db/: run_vis  run_visref
slides/modil/media/mgopt/cav2d_re100_bfgs/: args.json
slides/plugin/math/: katex.js
src/odil/: .gitignore  __init__.py  backend.py  cache.py  core.py  core_min.py  history.py  io.py  linsolver.py  multigrid.py  odil.mplstyle  optimizer.py  plot.py  plotutil.py  requirements.txt  runtime.py  util.py
tests/: .gitignore  Makefile  README.md  test_domain.py  test_interp.py  test_io.py  test_mg_interp.py  test_mg_restrict.py  test_newton.py  test_optimize.py  test_restrict.py
(+88 files in other folders)
