[project]
name = "odil"
version = "0.1.5"
authors = [
    { name="Petr Karnakov", email="pkarnakov@gmail.com" },
    { name="Sergey Litvinov", email="slitvinov@gmail.com" },
]
description = "ODIL (Optimizing a DIscrete Loss) is a framework for solving inverse problems for differential equations"
readme = "README.md"
dependencies = [
    "numpy",
    "psutil",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cselab/odil"
Issues = "https://github.com/cselab/odil/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

