[project]
name = "odil"
version = "0.1.8"
authors = [
    { name="Petr Karnakov", email="pkarnakov@gmail.com" },
    { name="Sergey Litvinov", email="slitvinov@gmail.com" },
]
description = "ODIL (Optimizing a DIscrete Loss) is a framework for solving inverse problems for differential equations"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

license = {text = "MIT"}
requires-python = ">=3.12"

# Versions from Ubuntu 24.04 LTS.
# https://packages.ubuntu.com/search?suite=noble&section=all&arch=any&keywords=python3-mypy&searchon=names
dependencies = [
    "numpy>=1.26.4",
    "psutil>=5.9.8",
    "scipy>=1.11.4",
    "matplotlib>=3.6.3",
]

[project.urls]
Homepage = "https://github.com/cselab/odil"
Issues = "https://github.com/cselab/odil/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py312']

[project.optional-dependencies]
tensorflow = ["tensorflow>=2.19.0"]
jax = ["jax[cuda]>=0.7.0", "jaxlib>=0.7.0"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "black>=25.9.0",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
]
